--- a/mongo.yaml
+++ b/mongo.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: mongo
-          image: mongo:latest
+          image: mongo:4.4
           volumeMounts:
           - name: mongo-volume
             mountPath: /data/db
