--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
   value: '8081'
     
 stages: 
-- stage: Build-Test
+- stage: BuildAndTest
   displayName: Build image and test
   variables:
   - name: API_URL
