update-azure-pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,7 +114,7 @@ stages:
         azureSubscription: 'Azure subscription 1 (d1673611-66dc-449c-9fb5-b755c18b24e1)'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
-        inlineScript: "az storage blob upload-batch -d '$web' -s ./ --account-name $(Storage_name) --account-key $(Acc_Key)"
+        inlineScript: "az storage blob upload-batch -d '$web' -s ./ --account-name $(Storage_name) --account-key $(Acc_Key) --overwrite"
         workingDirectory: '$(Pipeline.Workspace)/dropClient'
         
 - stage: DeployBackEnd
