update-azure-pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,8 @@ variables:
   value: 'nodejs-chess-server'
 - name: PORT
   value: '8081'
+- name: TEST
+  value: 'TEST' 
     
 stages: 
 - stage: Build
